--- a/app/src/main/res/drawable/ic_unmute_black.xml
+++ b/app/src/main/res/drawable/ic_unmute_black.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="375dp"
-    android:height="375dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="375"
     android:viewportHeight="375">
   <path
@@ -10,7 +11,8 @@
       android:strokeColor="#00000000"/>
   <group>
     <clip-path
-        android:pathData="M83,84.047L222,84.047L222,291L83,291ZM83,84.047"/>
+        android:pathData="M83,84.047L222,84.047L222,291L83,291ZM83,84.047"
+        tools:ignore="VectorRaster" />
     <path
         android:pathData="M216.359,84.809C194.629,84.809 192.355,84.809 184.945,94.738C179.574,101.926 168.465,116.801 126.137,146.445L99.809,146.445C90.539,146.445 83,153.984 83,163.246L83,212.027C83,221.289 90.539,228.824 99.809,228.824L126.137,228.824C168.465,258.469 179.574,273.344 184.945,280.535C192.359,290.465 194.629,290.465 216.359,290.465C219.418,290.465 221.895,287.988 221.895,284.934L221.895,90.34C221.895,87.281 219.418,84.809 216.359,84.809ZM216.359,84.809"
         android:fillColor="#000000"
@@ -19,7 +21,8 @@
   </group>
   <group>
     <clip-path
-        android:pathData="M252,127L292.25,127L292.25,250L252,250ZM252,127"/>
+        android:pathData="M252,127L292.25,127L292.25,250L252,250ZM252,127"
+        tools:ignore="VectorRaster" />
     <path
         android:pathData="M263.355,129.25C260.555,127.043 256.492,127.516 254.281,130.313C252.07,133.109 252.547,137.168 255.344,139.375C270.586,151.406 279.328,169.41 279.328,188.77C279.328,208 270.68,225.926 255.602,237.965C252.816,240.188 252.363,244.246 254.59,247.035C255.859,248.629 257.742,249.457 259.637,249.457C261.051,249.457 262.473,248.996 263.664,248.047C281.828,233.551 292.246,211.945 292.246,188.77C292.246,165.438 281.715,143.742 263.355,129.25ZM263.355,129.25"
         android:fillColor="#000000"
