--- a/app/src/main/res/layout/fragment_contest_overview.xml
+++ b/app/src/main/res/layout/fragment_contest_overview.xml
@@ -3,163 +3,171 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<ScrollView
-    android:layout_width="match_parent"
-    android:id="@+id/scroll"
-    android:layout_height="wrap_content">
-    <RelativeLayout
+    android:background="@color/white">
+
+    <ScrollView
         android:layout_width="match_parent"
+        android:id="@+id/scroll"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/resultLayout">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:text=" Publish Result "
+            android:layout_height="wrap_content">
 
-            android:id="@+id/pubBtn"
-            android:gravity="center"
-            android:padding="10dp"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/resultLayout">
 
-            android:layout_margin="20dp"
-            android:visibility="gone"
-            android:layout_marginTop="5dp"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/black"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#8BC34A"
-            android:text=" Result Published "
-            android:id="@+id/pubBtn2"
-            android:gravity="center"
-            android:padding="10dp"
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF"
+                    android:text=" Publish Result "
+                    android:id="@+id/pubBtn"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_margin="20dp"
+                    android:visibility="gone"
+                    android:layout_marginTop="5dp"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/black" />
 
-            android:layout_margin="20dp"
-            android:visibility="gone"
-            android:layout_marginTop="5dp"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/white"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_below="@+id/resultLayout"
-            android:id="@+id/relWin">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#8BC34A"
+                    android:text=" Result Published "
+                    android:id="@+id/pubBtn2"
+                    android:gravity="center"
+                    android:padding="10dp"
+
+                    android:layout_margin="20dp"
+                    android:visibility="gone"
+                    android:layout_marginTop="5dp"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_below="@+id/resultLayout"
+                android:id="@+id/relWin">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Winners"
+                    android:id="@+id/winner"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/scheme8" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/winner"
+                    android:id="@+id/recyclerWinner" />
+
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Winners"
-                android:id="@+id/winner"
+                android:text="Ranking"
+                android:id="@+id/rank"
+                android:layout_below="@+id/relWin"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:layout_marginTop="30dp"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/scheme8"
-                />
-         <androidx.recyclerview.widget.RecyclerView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_below="@+id/winner"
-             android:id="@+id/recyclerWinner"/>
+                android:textColor="@color/scheme8" />
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/rank"
+                android:layout_marginBottom="30dp"
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Ranking"
-    android:id="@+id/rank"
-    android:layout_below="@+id/relWin"
-    android:textSize="18sp"
-    android:textStyle="bold"
+                android:id="@+id/relLayout">
 
-    android:layout_centerHorizontal="true"
-    android:textColor="@color/scheme8"
-   />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rank"
-        android:layout_marginBottom="30dp"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:itemCount="10"
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/rankList" />
 
-        android:id="@+id/relLayout">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:itemCount="10"
-            android:layout_marginBottom="5dp"
-            android:id="@+id/rankList">
-        </androidx.recyclerview.widget.RecyclerView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See all rankings"
+                    android:id="@+id/seeRank"
+                    android:layout_marginEnd="10dp"
+                    android:layout_below="@+id/rankList"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/dot_dark_screen3" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="See all rankings"
-            android:id="@+id/seeRank"
-            android:layout_below="@+id/rankList"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/dot_dark_screen3"/>
-    </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relLayout"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relLayout"
+                android:id="@+id/juryvoteTable">
 
-            android:id="@+id/juryvoteTable">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Jury Votes"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:textStyle="bold"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jury Votes"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/scheme8" />
+            </RelativeLayout>
 
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/scheme8"
-            />
-        </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/juryvoteTable"
-        android:layout_marginBottom="30dp"
-        android:id="@+id/relLayout1">
-        <include layout="@layout/layout_overvew_jury_table"/>
-
-    </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relLayout1"
-
-            android:id="@+id/resultTable">
-            <TextView
+            <RelativeLayout
+                android:id="@+id/relLayout1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Result"
-                android:textStyle="bold"
+                android:layout_below="@+id/juryvoteTable"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="30dp">
 
-                android:textSize="18sp"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/scheme8"
-                />
+                <include layout="@layout/layout_overvew_jury_table" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relLayout1"
+                android:id="@+id/resultTable">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Result"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/scheme8" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/resultTable"
+                android:id="@+id/relLayout2">
+
+                <include layout="@layout/layout_jury_public_total" />
+            </RelativeLayout>
         </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/resultTable"
-        android:id="@+id/relLayout2">
-        <include layout="@layout/layout_jury_public_total"/>
-    </RelativeLayout>
-    </RelativeLayout>
-</ScrollView>
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -168,6 +176,7 @@
         android:background="#CC333232"
         android:visibility="gone"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -175,13 +184,14 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_gravity="center">
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                />
+                android:layout_marginLeft="10dp" />
+
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
@@ -190,8 +200,7 @@
                 android:layout_centerInParent="true"
                 android:textColor="@color/black"
                 android:text="Publishing Result..."
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
         </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
