--- a/app/src/main/res/layout/layout_overvew_jury_table.xml
+++ b/app/src/main/res/layout/layout_overvew_jury_table.xml
@@ -50,13 +50,14 @@
 
             android:text="Jury 2"
             android:textColor="@color/black" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
 
-            android:text="overall"
+            android:text="Overall"
             android:textColor="@color/black" />
 
 
