--- a/app/src/main/res/drawable-hdpi/rectangular_round_searchbar.xml
+++ b/app/src/main/res/drawable-hdpi/rectangular_round_searchbar.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item>
         <shape>
-            <solid
-                android:color="@color/white"/>
-            <stroke
-                android:color="#D6CFCF"
-                android:width="1dp"
-                />
-            <corners
-                android:radius="200dp"/>
+            <corners android:radius="200dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="#D6CFCF" />
         </shape>
     </item>
 </selector>
