--- a/app/src/main/res/drawable-xxxhdpi/rectangular_border.xml
+++ b/app/src/main/res/drawable-xxxhdpi/rectangular_border.xml
@@ -3,13 +3,9 @@
 
     <item>
         <shape>
-            <solid
-                android:color="@color/white"/>
-            <stroke
-                android:color="#D3D0D0"
-                android:width="1dp"
-                />
-<corners android:radius="5dp"/>
+            <corners android:radius="5dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="#D3D0D0" />
         </shape>
     </item>
 </selector>
