--- a/app/src/main/res/drawable-xxxhdpi/rectangular_round.xml
+++ b/app/src/main/res/drawable-xxxhdpi/rectangular_round.xml
@@ -3,14 +3,9 @@
 
     <item>
         <shape>
-            <solid
-                android:color="@color/white"/>
-            <stroke
-                android:color="#000000"
-                android:width="1dp"
-                />
-            <corners
-                android:radius="200dp"/>
+            <corners android:radius="200dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="#000000" />
         </shape>
     </item>
 </selector>
