--- a/app/src/main/res/drawable/pink_round_button.xml
+++ b/app/src/main/res/drawable/pink_round_button.xml
@@ -3,16 +3,11 @@
 
     <item>
         <shape>
-            <solid
-                android:color="@color/scheme8"/>
+            <corners android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" />
+            <solid android:color="@color/scheme8" />
             <stroke
 
-                android:color="@color/scheme8"
-                android:width="1dp"
-                />
-            <corners
-                android:bottomLeftRadius="10dp"
-                android:bottomRightRadius="10dp"/>
+                android:width="1dp" android:color="@color/scheme8" />
         </shape>
     </item>
 
