--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,144 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/post_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ScrollView
-            android:id="@+id/parent_scroll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content">
-
-                <RelativeLayout
-                    android:id="@+id/l"
-                    android:layout_width="match_parent"
-
-                    android:layout_height="wrap_content"
-
-                    android:background="@drawable/pink_round_button">
-
-                    <androidx.recyclerview.widget.RecyclerView
-
-                        android:id="@+id/recyclerContest"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:nestedScrollingEnabled="false"
-
-                        android:orientation="horizontal"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rel2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/l">
-
-                    <RelativeLayout
-                        android:id="@+id/domainRl"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/promo"
-                        android:layout_centerHorizontal="true">
-
-                        <ImageView
-                            android:id="@+id/domainBtn"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_star_black" />
-
-                        <ImageView
-                            android:id="@+id/domainBtnSel"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_star_color"
-                            android:visibility="gone" />
-                    </RelativeLayout>
-
-                    <TextView
-                        android:id="@+id/domainTv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/domainRl"
-                        android:layout_centerHorizontal="true"
-                        android:text="All"
-                        android:fontFamily="@font/orion"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-
-
-                    <RelativeLayout
-                        android:id="@+id/promo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white">
-
-                        <include
-                            android:id="@+id/item"
-
-                            layout="@layout/promote_item" />
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recyclerPromote"
-
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toRightOf="@+id/item"
-
-                            android:nestedScrollingEnabled="false"
-                            android:orientation="horizontal"
-                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-                    </RelativeLayout>
-                </RelativeLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/listview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/rel2"
-                    android:clipToPadding="false"
-                    android:nestedScrollingEnabled="false"
-
-
-                    android:paddingBottom="50dp">
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-                <ProgressBar
-                    android:id="@+id/pro2"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:background="@android:color/transparent"
-                    android:visibility="visible" />
-                <TextView
-                    android:id="@+id/noPost"
-                    android:layout_below="@+id/rel2"
-                    android:layout_width="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:text="NO POST TO SHOW"
-                    android:textSize="18sp"
-                    android:visibility="gone" />
-            </RelativeLayout>
-
-        </ScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
     <LinearLayout
         android:id="@+id/pro"
         android:layout_width="match_parent"
@@ -178,6 +40,144 @@
                 android:textSize="20sp" />
         </RelativeLayout>
     </LinearLayout>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/post_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ScrollView
+            android:id="@+id/parent_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/pro2"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:visibility="visible" />
+
+                <RelativeLayout
+                    android:id="@+id/rel2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/l">
+
+                    <RelativeLayout
+                        android:id="@+id/domainRl"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/promo"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp">
+
+                        <ImageView
+                            android:id="@+id/domainBtn"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_star_black" />
+
+                        <ImageView
+                            android:id="@+id/domainBtnSel"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_star_color"
+                            android:visibility="gone" />
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/promo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white">
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerPromote"
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/item"
+
+                            android:nestedScrollingEnabled="false"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+                        <include
+                            android:id="@+id/item"
+
+                            layout="@layout/promote_item" />
+                    </RelativeLayout>
+
+
+                    <TextView
+                        android:id="@+id/domainTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/domainRl"
+                        android:layout_centerHorizontal="true"
+                        android:fontFamily="@font/orion"
+                        android:text="All"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/l"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/pink_round_button">
+
+                    <androidx.recyclerview.widget.RecyclerView
+
+                        android:id="@+id/recyclerContest"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"
+
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/noPost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rel2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="NO POST TO SHOW"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/rel2"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+
+
+                    android:paddingBottom="50dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </RelativeLayout>
+
+        </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </RelativeLayout>
