--- a/app/src/main/res/layout/fragment_marks_and_votes.xml
+++ b/app/src/main/res/layout/fragment_marks_and_votes.xml
@@ -1,52 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/rel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/rel">
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/relLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/juryMarks">
+
+                <include layout="@layout/layout_participant_marks" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/relLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/votelist">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/votelistRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+
+            </RelativeLayout>
+
             <TextView
+                android:id="@+id/votelist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relLayout"
+                android:layout_marginTop="30dp"
+                android:text="Voters List"
+                android:textColor="@color/scheme8"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/juryMarks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Jury Marks "
                 android:textColor="@color/scheme8"
-                android:textSize="18sp"
-                android:id="@+id/juryMarks"/>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/juryMarks"
-        android:id="@+id/relLayout">
-<include layout="@layout/layout_participant_marks"/>
-    </RelativeLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Voters List"
-                android:layout_marginTop="30dp"
-                android:textColor="@color/scheme8"
-                android:textSize="18sp"
-                android:layout_below="@+id/relLayout"
-                android:id="@+id/votelist"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/relLayout1"
-        android:layout_below="@+id/votelist">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/votelistRv">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-
-    </RelativeLayout>
+                android:textSize="18sp" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
