--- a/app/src/main/res/layout/fragment_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/fragment_mainfeed_listitem.xml
@@ -208,7 +208,6 @@
                 android:layout_marginBottom="1dp"
                 android:padding="10dp">
 
-
                 <TextView
                     android:id="@+id/image_caption"
                     android:layout_width="wrap_content"
@@ -219,17 +218,12 @@
                     android:textColor="@color/black"
                     android:textSize="16dp" />
 
-
-
-
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/relLayout1"
-                android:id="@+id/post_imagelayout"
-
-                >
+                android:id="@+id/post_imagelayout">
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -237,9 +231,7 @@
                     app:cardUseCompatPadding="true"
                     app:cardCornerRadius="5dp"
                     android:elevation="5dp"
-
-                    android:outlineAmbientShadowColor="@color/white"
-                    >
+                    android:outlineAmbientShadowColor="@color/white">
                     <com.orion.orion.util.SquareImageView
                         android:id="@+id/frame"
                         android:visibility="visible"
@@ -268,6 +260,7 @@
                     <com.orion.orion.util.SquareImageView
                         android:id="@+id/thumbnail"
                         android:visibility="visible"
+                        android:background="@color/black"
                         android:src="@drawable/square"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
