--- a/app/src/main/res/drawable/pink_round_button.xml
+++ b/app/src/main/res/drawable/pink_round_button.xml
@@ -4,10 +4,10 @@
     <item>
         <shape>
             <corners android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/black" />
             <stroke
 
-                android:width="1dp" android:color="@color/colorPrimary" />
+                android:width="1dp" android:color="@color/black" />
         </shape>
     </item>
 
