--- a/app/src/main/res/layout/activity_fragment_upcoming_contest.xml
+++ b/app/src/main/res/layout/activity_fragment_upcoming_contest.xml
@@ -118,17 +118,16 @@
             android:layout_below="@+id/search"
             android:background="#CCFFFFFF"
             android:id="@+id/drag">
+
             <ImageView
+                android:id="@+id/filter"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"
-                android:id="@+id/filter"
-                android:visibility="gone"
-                android:src="@drawable/filter"
                 android:layout_centerHorizontal="true"
-                />
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_filter_black"
+                android:visibility="gone" />
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
@@ -137,7 +136,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
                 android:id="@+id/filteryellow"
-                android:src="@drawable/filter_yellow"
+                android:src="@drawable/ic_filter_peach"
                 android:layout_centerHorizontal="true"
                 />
 
