--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/black"
     android:id="@+id/rootView">
 
     <ProgressBar
@@ -29,8 +30,8 @@
             android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
            android:background="@drawable/orion_login"
             android:id="@+id/logo"
             android:textColor="@color/colorPrimary"
@@ -41,9 +42,12 @@
             android:text="SIGN UP"
             android:textSize="22sp"
             android:layout_below="@+id/logo"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"/>
         </RelativeLayout>
-
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -57,9 +61,13 @@
             android:padding="10dp"
             android:id="@+id/username"
             android:textSize="18sp"
-            android:imeOptions="actionNext">
-        </com.google.android.material.textfield.TextInputEditText>
+            android:imeOptions="actionNext"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -74,17 +82,16 @@
             android:id="@+id/input_email"
             android:textSize="18sp"
             android:imeOptions="actionNext"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
+            >
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
                 android:inputType="textPassword"
@@ -97,15 +104,22 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:imeOptions="actionDone"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-        </LinearLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:hint="Confirm Password"
+            app:endIconMode="password_toggle"
+
             android:padding="10dp"
             android:background="@drawable/rectangular_border"
             android:inputType="textPassword"
@@ -116,7 +130,7 @@
             android:id="@+id/confirm_password"
             android:textSize="18sp"
             android:imeOptions="actionDone"/>
-
+        </com.google.android.material.textfield.TextInputLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -162,7 +176,7 @@
             android:text="By creating this account, you agree to our Terms and Conditions and Privacy Policy"
             android:minLines="2"
             android:gravity="center_horizontal"
-            android:textColor="@color/grey"
+            android:textColor="@color/white"
             android:textSize="12sp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -176,7 +190,7 @@
             android:text="See"
 
             android:minLines="1"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -195,7 +209,7 @@
                 android:text="or"
 
                 android:minLines="1"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="12sp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -216,8 +230,7 @@
             android:layout_marginBottom="15dp"
             android:text="Register"
             android:id="@+id/btn_register"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:background="@drawable/white_round_button">
 
@@ -231,7 +244,7 @@
             android:text="I'm already a member"
             android:gravity="center_horizontal"
             android:paddingBottom="15sp"
-            android:textColor="@color/grey"
+            android:textColor="@color/white"
             android:id="@+id/link_login"
             android:textSize="14sp"/>
     </LinearLayout>
