--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,22 +99,28 @@
                         android:layout_height="wrap_content"
                         android:background="@color/white">
 
+                        <RelativeLayout
+                            android:id="@+id/itemLayout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
+
+                            <include
+                                android:id="@+id/item"
+                                layout="@layout/promote_item" />
+                        </RelativeLayout>
+
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recyclerPromote"
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_toRightOf="@+id/item"
+                            android:layout_toRightOf="@+id/itemLayout"
 
                             android:nestedScrollingEnabled="false"
                             android:orientation="horizontal"
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-                        <include
-                            android:id="@+id/item"
-
-                            layout="@layout/promote_item" />
                     </RelativeLayout>
 
 
