--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -156,7 +156,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|top"
-                                android:text="Win"
+                                android:text="Winnings"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
                                 android:textSize="15sp"
@@ -193,7 +193,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|top"
-                                android:text="Creations"
+                                android:text="Contest Created"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
                                 android:textSize="15sp"
@@ -234,7 +234,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|top"
-                                android:text="Participation's"
+                                android:text="Participation"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
                                 android:textSize="15sp"
@@ -427,7 +427,7 @@
                     android:layout_margin="10dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/circular_button"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/black"
                     android:elevation="5dp"
                     android:orientation="horizontal"
                     android:padding="5dp">
@@ -438,7 +438,7 @@
                         android:padding="5dp"
                         android:paddingRight="15dp"
                         android:text="Share Skill +"
-                        android:textColor="@color/black"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="18sp" />
 
 
@@ -567,7 +567,7 @@
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         android:text="Username"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -581,7 +581,7 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/orion"
                         android:text="Domain"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="30sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
