--- a/app/src/main/res/layout/fragment_viewprofile.xml
+++ b/app/src/main/res/layout/fragment_viewprofile.xml
@@ -256,7 +256,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|top"
-                                android:text="Win"
+                                android:text="Winnings"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
                                 android:textSize="15sp" />
@@ -291,7 +291,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|top"
-                                android:text="Creations"
+                                android:text="Contest Created"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
                                 android:textSize="15sp" />
@@ -331,7 +331,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal|top"
-                                android:text="Participation's"
+                                android:text="Participation"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
                                 android:textSize="15sp" />
@@ -573,7 +573,7 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/orion"
                         android:text="Domain"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="30sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -588,7 +588,7 @@
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         android:text="Username"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
