--- a/app/src/main/res/layout/item_leaderboard.xml
+++ b/app/src/main/res/layout/item_leaderboard.xml
@@ -56,7 +56,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="24"
                 android:gravity="center"
-                android:textColor="@color/light_orange"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
