--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -180,7 +180,7 @@
                             android:layout_centerVertical="true"
                             android:layout_alignParentEnd="true"
                             android:background="@drawable/rectangular_border"
-                            android:hint="Sescription"
+                            android:hint="Description"
                             android:maxLines="5"
                             android:inputType="textNoSuggestions"
                             android:padding="10dp" />
@@ -219,13 +219,15 @@
                             app:tint="@color/colorPrimary" />
 
                     </RelativeLayout>
-                    <RelativeLayout
+                    <LinearLayout
                         android:paddingStart="10dp"
                         android:id="@+id/relLayout5"
                         android:layout_width="wrap_content"
                         android:layout_height="25dp"
                         android:layout_below="@+id/relLayout4"
                         android:layout_marginTop="5dp"
+                        android:orientation="horizontal"
+                        android:weightSum="10"
                         tools:ignore="RtlSymmetry">
 
                         <TextView
@@ -233,6 +235,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
+                            android:layout_weight="8"
                             android:layout_alignParentStart="true"
                             android:textColor="@color/light_blue"
                             android:text="External Links"
@@ -250,18 +253,21 @@
                             android:layout_toRightOf="@+id/link1"
                             android:src="@drawable/ic_baseline_close_24" />
 
-                    </RelativeLayout>
-                    <RelativeLayout
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="horizontal"
                         android:paddingStart="10dp"
                         android:id="@+id/relLayout6"
                         android:layout_width="wrap_content"
                         android:layout_height="25dp"
                         android:layout_below="@+id/relLayout5"
                         android:layout_marginTop="5dp"
+                        android:weightSum="10"
                         tools:ignore="RtlSymmetry">
 
                         <TextView
                             android:id="@+id/link2"
+                            android:layout_weight="8"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_alignParentStart="true"
@@ -282,14 +288,16 @@
                             android:layout_toRightOf="@+id/link2"
                             android:src="@drawable/ic_baseline_close_24" />
 
-                    </RelativeLayout>
-                    <RelativeLayout
+                    </LinearLayout>
+                    <LinearLayout
                         android:paddingStart="10dp"
                         android:id="@+id/relLayout7"
                         android:layout_width="wrap_content"
                         android:layout_height="25dp"
                         android:layout_below="@+id/relLayout6"
                         android:layout_marginTop="5dp"
+                        android:orientation="horizontal"
+                        android:weightSum="10"
                         tools:ignore="RtlSymmetry">
 
                         <TextView
@@ -297,6 +305,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
+                            android:layout_weight="8"
                             android:layout_alignParentStart="true"
                             android:textColor="@color/light_blue"
                             android:text="External Links"
@@ -314,7 +323,7 @@
                             android:layout_toRightOf="@+id/link3"
                             android:src="@drawable/ic_baseline_close_24" />
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/pl"
